[gd_scene load_steps=9 format=3 uid="uid://b0yop6ggscpfv"]

[ext_resource type="PackedScene" uid="uid://b5uxjmvoij6of" path="res://Component/Enemy/enemy_base.tscn" id="1_72ylp"]
[ext_resource type="Script" path="res://Component/Enemy/enemy_gopher.gd" id="2_ih2uu"]
[ext_resource type="Texture2D" uid="uid://dryu6vpggme13" path="res://Resources/Enemy/Gopher/mole_dirt1.png" id="2_tyc8h"]
[ext_resource type="Texture2D" uid="uid://cirdt261f8na2" path="res://Resources/Enemy/Gopher/mole_base_right.png" id="3_sw2wm"]
[ext_resource type="PackedScene" uid="uid://bcwt4smsj20ie" path="res://Component/gopher_bullet.tscn" id="3_vb7d2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8t5ah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tyc8h")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_sw2wm")
}],
"loop": true,
"name": &"Popup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kon0d"]
size = Vector2(112, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3d4lr"]
size = Vector2(32, 20)

[node name="Gopher" node_paths=PackedStringArray("hitbox", "shoot_timer", "flip_timer", "subm", "shooter") instance=ExtResource("1_72ylp")]
script = ExtResource("2_ih2uu")
hitbox = NodePath("Hitbox/CollisionShape2D")
shoot_timer = NodePath("ShootTimer")
flip_timer = NodePath("FlipTimer")
subm = NodePath("SubmergeTimer")
bullet_scene = ExtResource("3_vb7d2")
shooter = NodePath("AnimatedSprite2D/Shooter")
max_chase_distance = 1500.0

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_8t5ah")
animation = &"Popup"

[node name="Shooter" type="Marker2D" parent="AnimatedSprite2D" index="0"]
position = Vector2(-58, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1, 29)
shape = SubResource("RectangleShape2D_kon0d")

[node name="PlayerChecker" parent="." index="5"]
position = Vector2(0, 24)
target_position = Vector2(-500, 0)

[node name="ShootTimer" type="Timer" parent="." index="6"]
wait_time = 3.0

[node name="FlipTimer" type="Timer" parent="." index="7"]
wait_time = 3.0

[node name="SubmergeTimer" type="Timer" parent="." index="8"]
wait_time = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="9"]
position = Vector2(-3, 53)
shape = SubResource("RectangleShape2D_3d4lr")
debug_color = Color(0.529412, 0.439216, 0.937255, 0.419608)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="FlipTimer" to="." method="_on_flip_timer_timeout"]
[connection signal="timeout" from="SubmergeTimer" to="." method="_on_submerge_timer_timeout"]
